--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,6 @@
-<%= @player_1_name %> attacked <%= @player_2_name %>
+<%= @game.player_1.name %> attacked <%= @game.player_2.name%>
 
-<%= @player_2_name %>: <%= @hitpoints %>HP
+
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
+
+Now it is <%= @game.current_turn.name %>'s turn
