--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,7 @@
-<%= @player_1_name %> vs. <%= @player_2_name %>
-<%= @player_2_name %>: 60HP
+<%= @game.player_1.name %> vs. <%= @game.player_2.name %>
+
+<%= @game.current_turn.name %>'s turn
+
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>HP
 
 <a href="/attack">Attack</a>
